added task creation with sequential task code